# learn_webgpu_c_2_-dawn-

./: .gitignore  CMakeLists.txt  compile_commands.json  main.cpp
1_getting_started/: adapter.c  binaries.cmake  buffers.c  command_queue.c  device.c  first_color.c  hello_webgpu.c  open_window.c
2_hello_triangle/: binaries.cmake  hello_triangle.c
3_input_geometry/: binaries.cmake  helper.c  helper.h  index_buffer.c  loading_from_file.c  loading_from_file_exp.c  multiple_attributes_a.c  multiple_attributes_b.c  vertex_attribute.c
3_input_geometry/resources/: shader.wsl
4_uniforms/: a_first_uniform.c  binaries.cmake  dynamic_uniforms.c  helper_v2.c  helper_v2.h  more_uniforms.c
4_uniforms/resources/: more_uniforms.wsl  shader.wsl
5_3d_meshes/: a_simple_example.c  binaries.cmake  depth_buffer.c  helper_v3.c  helper_v3.h  tmp.cpp  transformation_matrices.c
5_3d_meshes/resources/: depth_buffer.wsl  shader.wsl  transformation_matrices.wsl
glfw3webgpu/: CMakeLists.txt
